Implementing Semaphore libary *issue with uthread_unblock() not referenced

--- a/libuthread/Makefile
+++ b/libuthread/Makefile
@@ -1,6 +1,6 @@
 # Target library
 lib := libuthread.a
-src := queue.c uthread.c context.c
+src := queue.c uthread.c context.c sem.c 
 obj := $(src:.c=.o)
 all: $(lib)
 
