--- a/apps/Makefile
+++ b/apps/Makefile
@@ -2,7 +2,8 @@
 programs := \
 	queue_tester_example.x \
 	uthread_hello.x \
-	uthread_yield.x
+	uthread_yield.x \
+	sem_simple.x	\
 
 # User-level thread library
 UTHREADLIB := libuthread
