--- a/apps/Makefile
+++ b/apps/Makefile
@@ -4,6 +4,9 @@ programs := \
 	uthread_hello.x \
 	uthread_yield.x \
 	sem_simple.x	\
+	sem_count.x		\
+	sem_buffer.x	\
+	sem_prime.x		\
 
 # User-level thread library
 UTHREADLIB := libuthread
